Use real types instead of `var` to improve readability